Corrected the footer alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1022,7 +1022,6 @@ header .back-arrow a :hover {
 
 footer {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 100%;
